testing files for paper stats

--- a/data/narc-merged/udapi_stats.ipynb
+++ b/data/narc-merged/udapi_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,24 +10,54 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "1\tHennes\tname=O|Entity=(1(2)\n",
+    "2\tfraseparerte\tname=O\n",
+    "3\tektemann\tSpaceAfter=No|name=O\n",
+    "4\t,\tname=O\n",
+    "5\tsom\tname=O\n",
+    "6\thar\tname=O\n",
+    "7\thentet\tname=O\n",
+    "8\tbarnet\tname=O|Entity=(3\n",
+    "9\tderes\tname=O|SplitAnte=1<4,2<4|Entity=(4)3)\n",
+    "10\tnoen\tname=O|Entity=(5\n",
+    "11\tdager\tname=O|Entity=5)\n",
+    "12\ttidligere\tSpaceAfter=No|name=O|Entity=1)\n",
+    "13\t,\tname=O\n",
+    "14\ter\tname=O\n",
+    "15\tikke\tname=O\n",
+    "16\tå\tname=O\n",
+    "17\tfå\tname=O\n",
+    "18\ttak\tname=O|Entity=(6\n",
+    "19\ti\tSpaceAfter=No|name=O|Entity=6)\n",
+    "20\t.\tname=O\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "No global.Entity header found, but Entity= annotations are presents",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[157], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m f \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/Users/tollef/Downloads/git/PHD/COREF/UD-NARC/NorNE/ud/nno/no_nynorsk-ud-dev.conllu\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     19\u001b[0m f \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39msample.conllu\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> 20\u001b[0m process_file(f)\n",
-      "Cell \u001b[0;32mIn[157], line 7\u001b[0m, in \u001b[0;36mprocess_file\u001b[0;34m(f)\u001b[0m\n\u001b[1;32m      5\u001b[0m udapi\u001b[39m.\u001b[39mDocument()\n\u001b[1;32m      6\u001b[0m counts \u001b[39m=\u001b[39m defaultdict(\u001b[39mint\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m counts[\u001b[39m\"\u001b[39m\u001b[39mentities[Stats]\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(doc\u001b[39m.\u001b[39;49mcoref_entities)\n\u001b[1;32m      8\u001b[0m counts[\u001b[39m\"\u001b[39m\u001b[39mmentions[Stats]\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(doc\u001b[39m.\u001b[39mcoref_mentions)\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m node \u001b[39min\u001b[39;00m doc\u001b[39m.\u001b[39mnodes:\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/udapi/core/document.py:145\u001b[0m, in \u001b[0;36mDocument.coref_entities\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[1;32m    143\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcoref_entities\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    144\u001b[0m     \u001b[39m\"\"\"A list of all CorefEntity objects in the document.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 145\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_load_coref()\n\u001b[1;32m    146\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_eid_to_entity\u001b[39m.\u001b[39mvalues())\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/udapi/core/document.py:123\u001b[0m, in \u001b[0;36mDocument._load_coref\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[39m\"\"\"De-serialize coreference-related objects (CorefMention, CorefEntity).\u001b[39;00m\n\u001b[1;32m    117\u001b[0m \n\u001b[1;32m    118\u001b[0m \u001b[39mThis internal method will be called automatically whenever any coref-related method is called.\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[39mIt iterates through all nodes in the document and creates the objects based on the info in MISC\u001b[39;00m\n\u001b[1;32m    120\u001b[0m \u001b[39m(stored in attributes Entity, SplitAnte, Bridge).\u001b[39;00m\n\u001b[1;32m    121\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    122\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_eid_to_entity \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 123\u001b[0m     udapi\u001b[39m.\u001b[39;49mcore\u001b[39m.\u001b[39;49mcoref\u001b[39m.\u001b[39;49mload_coref_from_misc(\u001b[39mself\u001b[39;49m)\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/udapi/core/coref.py:524\u001b[0m, in \u001b[0;36mload_coref_from_misc\u001b[0;34m(doc, strict)\u001b[0m\n\u001b[1;32m    521\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m    523\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m was_global_entity:\n\u001b[0;32m--> 524\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNo global.Entity header found, but Entity= annotations are presents\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    526\u001b[0m \u001b[39m# The Entity attribute may contain multiple entities, e.g.\u001b[39;00m\n\u001b[1;32m    527\u001b[0m \u001b[39m# Entity=(abstract-7-new-2-coref(abstract-3-giv:act-1-coref)\u001b[39;00m\n\u001b[1;32m    528\u001b[0m \u001b[39m# means a start of entity id=7 and start&end (i.e. single-word mention) of entity id=3.\u001b[39;00m\n\u001b[1;32m    529\u001b[0m \u001b[39m# The following re.split line splits this into\u001b[39;00m\n\u001b[1;32m    530\u001b[0m \u001b[39m# chunks = [\"(abstract-7-new-2-coref\", \"(abstract-3-giv:act-1-coref)\"]\u001b[39;00m\n\u001b[1;32m    531\u001b[0m chunks \u001b[39m=\u001b[39m [x \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m re\u001b[39m.\u001b[39msplit(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m(\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m([^()]+\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m)?|[^()]+\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m))\u001b[39m\u001b[39m'\u001b[39m, misc_entity) \u001b[39mif\u001b[39;00m x]\n",
-      "\u001b[0;31mValueError\u001b[0m: No global.Entity header found, but Entity= annotations are presents"
-     ]
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {'entities[Stats]': 6,\n",
+       "             'mentions[Stats]': 6,\n",
+       "             'Entity[MiscStats]': 8,\n",
+       "             'SpaceAfter[MiscStats]': 3,\n",
+       "             'SplitAnte[MiscStats]': 1})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -48,8 +78,8 @@
     "            counts[attr + \"[MiscStats]\"] += 1\n",
     "    return counts\n",
     "\n",
-    "f = \"/Users/tollef/Downloads/git/PHD/COREF/UD-NARC/NorNE/ud/nno/no_nynorsk-ud-dev.conllu\"\n",
     "f = \"sample.conllu\"\n",
+    "f = \"sample2.conllu\"\n",
     "process_file(f)"
    ]
   },
@@ -85,8 +115,7 @@
     "            for key, value in _stats.items():\n",
     "                stats[key] += value\n",
     "    print(lang)\n",
-    "    print(stats)\n",
-    "            "
+    "    print(stats)"
    ]
   },
   {
@@ -125,12 +154,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "29f1e52c0d8d5e5ede6aaca4be8238d35b46afd62a3b8286547e2768de775769"
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
    }
   }
  },
