conversion conll-jsonl scripts

--- a/experiments/create_coref_chains.ipynb
+++ b/experiments/create_coref_chains.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -119,41 +119,50 @@
        "[[(0, 2), (8, 9)], [(2, 2)], [(2, 5)]]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import re\n",
+    "from collections import defaultdict\n",
     "\n",
-    "CONLL_MENTION_PATTERN = re.compile(\n",
-    "    r'(?:\\((?P<mono>\\d+)\\)|\\((?P<start>\\d+)|(?P<end>\\d+)\\))')\n",
+    "# Define a regular expression pattern to match CoNLL-style mention annotations\n",
+    "CONLL_MENTION_PATTERN = re.compile(r'(?:\\((?P<mono>\\d+)\\)|\\((?P<start>\\d+)|(?P<end>\\d+)\\))')\n",
     "\n",
     "def compute_mentions(columns):\n",
+    "    # Use a dictionary to keep track of pending mentions waiting for an \"end\" tag\n",
     "    pending = defaultdict(list)\n",
     "    mentions = []\n",
-    "    i = 0\n",
-    "\n",
+    "    \n",
+    "    # Iterate over each column in the input\n",
     "    for i, col in enumerate(columns):\n",
+    "        # Find all CoNLL-style mention annotations in the column using the regex pattern\n",
     "        for m in CONLL_MENTION_PATTERN.finditer(col):\n",
+    "            # If the annotation is a singleton mention, add it to the mentions list\n",
     "            if m.lastgroup == 'mono':\n",
     "                pos = (i, i+1)\n",
     "                chain = int(m.group(m.lastgroup))\n",
     "                mentions.append((pos, chain))\n",
+    "            # If the annotation is a start tag, add it to the pending list\n",
     "            elif m.lastgroup == 'start':\n",
     "                chain = int(m.group(m.lastgroup))\n",
-    "                if not chain in pending:\n",
+    "                if chain not in pending:\n",
     "                    pending[chain] = []\n",
     "                pending[chain].append(i)\n",
+    "            # If the annotation is an end tag, retrieve the corresponding start tag\n",
+    "            # from the pending list and add the mention to the mentions list\n",
     "            elif m.lastgroup == 'end':\n",
     "                chain = int(m.group(m.lastgroup))\n",
     "                pos = (pending[chain].pop(), i+1)\n",
     "                mentions.append((pos, chain))\n",
     "            else:\n",
+    "                # This should never happen\n",
     "                assert False\n",
     "\n",
     "    return mentions\n",
+    "\n",
     "\n",
     "def compute_chains(columns):\n",
     "    chains = dict()\n",
@@ -173,21 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_references(ents):\n",
-    "    # from a list of entities, [\"1)\", \"2)\"], build a dictionary of references\n",
-    "    references = {}\n",
-    "\n",
-    "\n",
-    "    return []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
