--- a/experiments/restructure_aligned_conll_json.ipynb
+++ b/experiments/restructure_aligned_conll_json.ipynb
@@ -174,48 +174,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "from collections import defaultdict\n",
     "\n",
-    "CONLL_MENTION_PATTERN = re.compile(\n",
-    "    r'(?:\\((?P<mono>\\d+)\\)|\\((?P<start>\\d+)|(?P<end>\\d+)\\))')\n",
+    "# Define a regular expression pattern to match CoNLL-style mention annotations\n",
+    "CONLL_MENTION_PATTERN = re.compile(r'(?:\\((?P<mono>\\d+)\\)|\\((?P<start>\\d+)|(?P<end>\\d+)\\))')\n",
     "\n",
     "def compute_mentions(columns):\n",
+    "    # Use a dictionary to keep track of pending mentions waiting for an \"end\" tag\n",
     "    pending = defaultdict(list)\n",
     "    mentions = []\n",
-    "    i = 0\n",
-    "\n",
+    "    \n",
+    "    # Iterate over each column in the input\n",
     "    for i, col in enumerate(columns):\n",
+    "        # Find all CoNLL-style mention annotations in the column using the regex pattern\n",
     "        for m in CONLL_MENTION_PATTERN.finditer(col):\n",
+    "            # If the annotation is a singleton mention, add it to the mentions list\n",
     "            if m.lastgroup == 'mono':\n",
     "                pos = (i, i+1)\n",
     "                chain = int(m.group(m.lastgroup))\n",
     "                mentions.append((pos, chain))\n",
+    "            # If the annotation is a start tag, add it to the pending list\n",
     "            elif m.lastgroup == 'start':\n",
     "                chain = int(m.group(m.lastgroup))\n",
-    "                if not chain in pending:\n",
+    "                if chain not in pending:\n",
     "                    pending[chain] = []\n",
     "                pending[chain].append(i)\n",
+    "            # If the annotation is an end tag, retrieve the corresponding start tag\n",
+    "            # from the pending list and add the mention to the mentions list\n",
     "            elif m.lastgroup == 'end':\n",
     "                chain = int(m.group(m.lastgroup))\n",
     "                pos = (pending[chain].pop(), i+1)\n",
     "                mentions.append((pos, chain))\n",
     "            else:\n",
+    "                # This should never happen\n",
     "                assert False\n",
     "\n",
     "    return mentions\n",
     "\n",
     "def compute_chains(columns):\n",
+    "    # Use a dictionary to keep track of chains, where the key is the chain ID\n",
+    "    # and the value is a list of (start, end) tuples representing the spans of\n",
+    "    # the mentions in the chain\n",
     "    chains = dict()\n",
+    "    \n",
+    "    # Iterate over each mention in the input and add it to the appropriate chain\n",
     "    for (start, stop), chain_id in compute_mentions(columns):\n",
     "        end = stop - 1\n",
     "        if chain_id not in chains:\n",
     "            chains[chain_id] = []\n",
     "        chains[chain_id].append((start, end))\n",
+    "    \n",
+    "    # Return the list of chains (i.e., the values of the chains dictionary)\n",
     "    return list(chains.values())\n",
+    "\n",
     "\n",
     "def get_coref_clusters_from_doc(doc):\n",
     "    misc = []\n",
@@ -243,10 +259,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Tuple, List\n",
+    "\n",
+    "\n",
+    "def get_head(mention: Tuple[int, int], heads: List[int]) -> int:\n",
+    "    \"\"\"Returns the span's head, which is defined as the only word within the\n",
+    "    span whose head is outside of the span or None. In case there are no or\n",
+    "    several such words, the rightmost word is returned\n",
+    "    Args:\n",
+    "        mention (Tuple[int, int]): start and end (exclusive) of a span\n",
+    "        doc (dict): the document data\n",
+    "    Returns:\n",
+    "        int: word id of the spans' head\n",
+    "    \"\"\"\n",
+    "    head_candidates = set()\n",
+    "    start, end = mention\n",
+    "    for i in range(start, end):\n",
+    "        ith_head = heads[i]\n",
+    "        if ith_head is None or not (start <= ith_head < end):\n",
+    "            head_candidates.add(i)\n",
+    "    if len(head_candidates) == 1:\n",
+    "        return head_candidates.pop()\n",
+    "    return end - 1\n",
     "\n",
     "\n",
     "def parse_doc(doc, part_id=None):\n",
@@ -270,10 +308,35 @@
     "\n",
     "    pos = [word[\"upos\"] for sent in doc for word in sent]\n",
     "    deprel = [word[\"deprel\"] for sent in doc for word in sent]\n",
-    "    head = [word[\"head\"] for sent in doc for word in sent]\n",
+    "    heads = [word[\"head\"] for sent in doc for word in sent]\n",
+    "    heads = [None if n == b else b for n, b in enumerate(heads)]\n",
     "\n",
     "    # now we need to group all coreference clusters...\n",
     "    clusters = get_coref_clusters_from_doc(doc)\n",
+    "\n",
+    "    ###############\n",
+    "    # this is the \"to_heads\" functionality from wl-coref\n",
+    "    ###############\n",
+    "    head_clusters = [\n",
+    "        [get_head(mention, heads) for mention in cluster]\n",
+    "        for cluster in clusters\n",
+    "    ]\n",
+    "    # check for duplicates\n",
+    "    head2spans = defaultdict(list)\n",
+    "    for cluster, head_cluster in zip(clusters, head_clusters):\n",
+    "        for span, span_head in zip(cluster, head_cluster):\n",
+    "            head2spans[span_head].append((span, head_cluster))\n",
+    "\n",
+    "    filtered_head2spans = []\n",
+    "    for head, spans in head2spans.items():\n",
+    "        spans.sort(key=lambda x: x[0][1] - x[0][0])  # shortest spans first\n",
+    "        filtered_head2spans.append((head, *spans[0][0]))\n",
+    "        if len(spans) > 1:\n",
+    "            for _, cluster in spans[1:]:\n",
+    "                cluster.remove(head)\n",
+    "\n",
+    "    filtered_head_clusters = [\n",
+    "        cluster for cluster in head_clusters if len(cluster) > 1]\n",
     "\n",
     "    data = {\n",
     "        \"document_id\":      doc_id,\n",
@@ -283,20 +346,23 @@
     "        \"speaker\":          speaker,\n",
     "        \"pos\":              pos,\n",
     "        \"deprel\":           deprel,\n",
-    "        \"head\":             head,\n",
-    "        \"clusters\":         clusters\n",
+    "        \"head\":             heads,\n",
+    "        \"span_clusters\":    clusters,\n",
+    "        \"word_clusters\":    filtered_head_clusters,\n",
+    "        \"head2span\":        filtered_head2spans,\n",
     "    }\n",
     "    return data\n",
+    "\n",
     "\n",
     "doc_id = 'ap~20050210-762251'\n",
     "doc = grouped_docs[doc_id]\n",
     "\n",
-    "parsed = parse_doc(doc)"
+    "parsed = parse_doc(doc)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
